# coldwatch

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DRY_RUN_PATCH.txt  EXPORT.md  INVENTORY.md  Makefile  PHASE_2_PLAN.md  PRIVACY.md  PROJECT_STATUS.md  README.md  REFERENCES.md  SUMMARIES.md  TROUBLESHOOTING.md  pyproject.toml
.github/workflows/: ci-commit.yml  ci-pr.yml  precommit-autoupdate.yml  precommit.yml
docs/: CI.md  GTK_ACCESSIBILITY_WARNING.md
examples/: analyze_data.py  mock_app.py  run_headless_test.py
export/: .gitignore  README.md  accessibility_logger.py  analyze_data.py  run_test.py
orig/: accessibility_logger.py  mock_app.py  test-features.py
scripts/: bootstrap.sh
src/coldwatch/: __init__.py  analyze.py  cli.py  core.py  db.py  logging_config.py  privacy.py  scanner.py  types.py
src/coldwatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_db.py  test_integration_headless.py
