[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coldwatch"
version = "0.1.0"
description = "AT-SPI accessibility logger with CLI and analysis tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7",
  "ruff>=0.6",
  "black>=24.8",
  "pytest>=8.3",
  "pytest-cov>=5.0",
]

[project.scripts]
coldwatch = "coldwatch.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "I"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
markers = [
  "integration: requires AT-SPI, GTK, and Xvfb",
]
testpaths = [
  "tests",
]
